--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -36,6 +36,38 @@
                 </div>
             </div>
         </section>
+        <section id="feature-home" class="row-gray">
+            <div class="container">
+                <div class="row">
+                    <div class="faetures">
+                        <div class="col-sm-4">
+                            <div class="round-box">
+                                <div class="faeture-wrap">
+                                    <h3 class="text-center">Get on schedule</h3>
+                                    <p>Get a time scheluded to come enjoy a time with us</p>
+                                    <br>
+                                    <div class="text-center">
+                                        <a href="wwr/trips.html"></a>
+                                    </div>
+                                 </div>
+                            </div>
+                        </div>
+                        <div clss="col-sm-4">
+                            <div class="round-box su">
+                                <div class="faeture-wrap">
+                                    <h3 clsss="text-center">Learn About us</h3>
+                                    <p>Desire to know more about us just click here.</p>
+                                    <br>
+                                    <div class="text-center">
+                                        <a hrel="wwr/about.html">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <h2>Overview</h2>
         <h3>Purpose</h3>
         <p>why?
