--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>site plan rafting - William Hansen</title>
+    <title>The rafting Compnay - William Hansen</title>
     <meta name="description" content="The rafting site is for those that desire to raft">
     <meta name="author" content="William Hansen">
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
 <body>
     <head> 
-        <nav>
-            <a href="site-plan-rafting.html">Home</a>
-            <a href="about.html">about Us</a>
-            <a href="contact.html">Contact Us</a>
-        </nav>
-    <h1>Rafting Site Plan </h1>
+    <h1>The Rafting company </h1>
     <div>William Hansen</div>
     </head>
 
