--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -16,11 +16,17 @@
 
     <main>
         <header>
-            <nav class="navbar navbar-inverse" role="banner" style="z-index: 99;">
-                <a href="site-plan-rafting.html">Home</a>
-                <a href="about.html">about Us</a>
-                <a href="contact.html">Contact Us</a>
-            </nav>
+            <div class="top-bar">
+                <nav class="navbar navbar-inverse" role="banner" style="z-index: 99;">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <a href="site-plan-rafting.html">Home</a>
+                            <a href="about.html">about Us</a>
+                            <a href="contact.html">Contact Us</a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </header>
         <section id="home-hero" class="no-margin">
             <div class="container">
