--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -30,7 +30,7 @@
         </header>
         <section id="home-hero" class="no-margin">
             <div class="container">
-                <h1 class="text-center">Crazy river Adventures</h1>
+                <h1 class="text-center">Crazy Adventures</h1>
                 <p class="lead text-center">We have skilled rafters waiting to help you!</p>
                 <div class="text-center">
                     <a href="wwr/trip.html">Get an Adventure Planned</a>
