--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -48,7 +48,7 @@
                                     <p>Get a time scheluded to come enjoy a time with us</p>
                                     <br>
                                     <div class="text-center">
-                                        <a href="wwr/trips.html"></a>
+                                        <a href="wwr/trips.html">schedule here</a>
                                     </div>
                                  </div>
                             </div>
@@ -60,7 +60,7 @@
                                     <p>Desire to know more about us just click here.</p>
                                     <br>
                                     <div class="text-center">
-                                        <a hrel="wwr/about.html">Learn More</a>
+                                        <a href="wwr/about.html">Learn More</a>
                                     </div>
                                 </div>
                             </div>
