--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -80,16 +80,7 @@
         <p>this site is for all those desiring to start or continue there knowledge on rafting.</p>
         <h2>Branding</h2>
         <h3>Website logo</h3>
-        <img src="images/logo.png" alt="Rafting Site logo">
-        <h2>style guide</h2>
-        <h3>color palette</h3>
-        <p>     <a href="https://coolors.co/b7d3f2-afafdc-8a84e2-84afe6-79beee" target="_blank">https://coolors.co/b7d3f2-afafdc-8a84e2-84afe6-79beee</a></p>
-        <h3>typogrphy </h3>
-        <h4>heading font - serif</h4>
-        <p>lorem ipsum dolor sit amet consectetur adipisicing alit. minima, inventore.</p>
-        <h4>colored callout example font - sans-serif</h4>
-        <p>lorem ipsum dolor sit amet consectetur adipisicing alit. minima, inventore.</p>
-        <h3>navigation</h3>
+        <img src="images/logo.png" alt="Rafting Site">
         <h2>Wireframes</h2>
         <h3>Home Page Wireframes</h3>
         <img src="images/wwr-wireframe-home.png" alt="home page Wireframe">
