--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -69,11 +69,15 @@
         </section>
         <h2>Overview</h2>
         <h3>Purpose</h3>
-        <p>why?
-            -to help those to know about rafting 
+        <h4>Why?</h4>
+        <p>-to help those to know about rafting 
             Who is this site for?
-            -experts, thrill seeker, and people interested in the sport.
+
+        </P>
+        <p>    -experts, thrill seeker, and people interested in the sport.
             what will this help me with?
+        </p>
+        <P>
             -learning about it, where you can go, and more!
         </p>
         <h3>Audience</h3>
