--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -23,6 +23,7 @@
                             <a href="site-plan-rafting.html">Home</a>
                             <a href="about.html">about Us</a>
                             <a href="contact.html">Contact Us</a>
+                            <a href="trips.html">Our trips</a>
                         </div>
                     </div>
                 </nav>
@@ -46,7 +47,7 @@
                                     <p>Get a time scheluded to come enjoy a time with us</p>
                                     <br>
                                     <div class="text-center">
-                                        <a href="wwr/trips.html">schedule here</a>
+                                        <a href="trips.html">schedule here</a>
                                     </div>
                                  </div>
                             </div>
@@ -58,7 +59,7 @@
                                     <p>Desire to know more about us just click here.</p>
                                     <br>
                                     <div class="text-center">
-                                        <a href="wwr/about.html">Learn More</a>
+                                        <a href="about.html">Learn More</a>
                                     </div>
                                 </div>
                             </div>
