--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -11,3 +11,86 @@
   <meta name="author" content="William Hansen">
   <link rel="stylesheet" href="styles/trips.css">
 </head>
+<body>
+   <head> 
+   <h1>The Rafting company </h1>
+   <div>William Hansen</div>
+   </head>
+   <main>
+       <header>
+           <div class="top-bar">
+               <nav class="navbar navbar-inverse" role="banner" style="z-index: 99;">
+                   <div class="container">
+                       <div class="navbar-header">
+                           <a href="site-plan-rafting.html">Home</a>
+                           <a href="about.html">about Us</a>
+                           <a href="contact.html">Contact Us</a>
+                       </div>
+                   </div>
+               </nav>
+           </div>
+       </header>
+       <section id="home-hero" class="no-margin">
+           <div class="container">
+               <h1 class="text-center">Crazy Adventures</h1>
+               <p class="lead text-center">We have skilled rafters waiting to he
+               </div>
+           </div>
+       </section>
+       <section id="feature-home" class="row-gray">
+           <div class="container">
+               <div class="row">
+                   <div class="faetures">
+                       <div class="col-sm-4">
+                           <div class="round-box">
+                               <div class="faeture-wrap">
+                                    <h3 class="text-center">Get on schedule</h3>
+                                    <p>Get a time scheluded to come enjoy a time 
+                                    <br>
+                                    <div class="text-center">
+                                       <a href="wwr/trips.html">schedule here</a>
+                                    </div>
+                                </div>
+                           </div>
+                       </div>
+                       <div clss="col-sm-4">
+                           <div class="round-box su">
+                               <div class="faeture-wrap">
+                                   <h3 clsss="text-center">Learn About us</h3>
+                                   <p>Desire to know more about us just click he
+                                   <br>
+                                   <div class="text-center">
+                                       <a href="wwr/about.html">Learn More</a>
+                                   </div>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </section>
+       <h2>Overview</h2>
+       <h3>Purpose</h3>
+       <h4>Why?</h4>
+       <p>-to help those to know about rafting 
+           Who is this site for?
+       </P>
+       <p>    -experts, thrill seeker, and people interested in the sport.
+           what will this help me with?
+       </p>
+       <P>
+           -learning about it, where you can go, and more!
+       </p>
+       <h3>Audience</h3>
+       <p>this site is for all those desiring to start or continue there knowled
+       <h2>Branding</h2>
+       <h3>Website logo</h3>
+       <img src="images/logo.png" alt="Rafting Site">
+       <h2>Wireframes</h2>
+       <h3>Home Page Wireframes</h3>
+    </main>
+    <footer>
+
+    </footer>
+</body>
+</html>
