--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -9,7 +9,7 @@
   <title>William Hansen - WDD 130</title>
   <meta name="description" content="The is William home page for WDD130 for my assignment">
   <meta name="author" content="William Hansen">
-  <link rel="stylesheet" href="styles/trips.css">
+  <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
    <head> 
@@ -82,13 +82,6 @@
        <P>
            -learning about it, where you can go, and more!
        </p>
-       <h3>Audience</h3>
-       <p>this site is for all those desiring to start or continue there knowled
-       <h2>Branding</h2>
-       <h3>Website logo</h3>
-       <img src="images/logo.png" alt="Rafting Site">
-       <h2>Wireframes</h2>
-       <h3>Home Page Wireframes</h3>
     </main>
     <footer>
 
