--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -44,9 +44,9 @@
                    <div class="faetures">
                        <div class="col-sm-4">
                            <div class="round-box">
-                               <div class="faeture-wrap">
-                                    <h3 class="text-center">Get on schedule</h3>
-                                    <p>Get a time scheluded to come enjoy a time 
+                               <div class="feature-wrap">
+                                    <h3 class="text-center">Contact us today!</h3>
+                                    <p>Get in contact with us to get a time.
                                     <br>
                                     <div class="text-center">
                                        <a href="trips.html">schedule here</a>
@@ -56,7 +56,7 @@
                        </div>
                        <div clss="col-sm-4">
                            <div class="round-box su">
-                               <div class="faeture-wrap">
+                               <div class="feature-wrap">
                                    <h3 clsss="text-center">Learn About us</h3>
                                    <p>Desire to know more about us just click he
                                    <br>
