--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -9,7 +9,7 @@
   <title>William Hansen - WDD 130</title>
   <meta name="description" content="The is William home page for WDD130 for my assignment">
   <meta name="author" content="William Hansen">
-  <link rel="stylesheet" href="styles/rafting.css">
+  <link rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
 <body>
    <head> 
