--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -49,7 +49,7 @@
                                     <p>Get in contact with us to get a time.
                                     <br>
                                     <div class="text-center">
-                                       <a href="trips.html">schedule here</a>
+                                       <a href="trips.html">Contact Us</a>
                                     </div>
                                 </div>
                            </div>
@@ -71,7 +71,14 @@
            </div>
        </section>
        <h2>Trips</h2>
-       
+       <p>The Payette River</p>
+       <P>5-7 people (Just raft) - $150</P>
+       <p>5-7 people (with guide) - $200</p>
+       <p>1 kayak (not guide) - $75</p>
+       <P>1 kayak with guide - $150</P>
+
+
+
     </main>
     <footer>
 
