--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -72,8 +72,13 @@
        </section>
        <h2>Trips</h2>
        <p>The Payette River</p>
+       <img src="images/payette.webp" alt="the river">
+       <h3>Rafting</h3>
+       <img src="images/raftingtrip.jpg" alt="with a guide">
        <P>5-7 people (Just raft) - $150</P>
        <p>5-7 people (with guide) - $200</p>
+       <h4>kayaking</h4>
+       <img src="images/kayak.jpg" alt="guided group">
        <p>1 kayak (not guide) - $75</p>
        <P>1 kayak with guide - $150</P>
 
