--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -33,9 +33,8 @@
        </header>
        <section id="home-hero" class="no-margin">
            <div class="container">
-               <h1 class="text-center">Crazy Adventures</h1>
-               <p class="lead text-center">We have skilled rafters waiting to he
-               </div>
+               <h1 class="text-center">Your Adventure</h1>
+               <p class="lead text-center">Starts Here!</p>
            </div>
        </section>
        <section id="feature-home" class="row-gray">
