--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -76,10 +76,16 @@
        <img src="images/raftingtrip.jpg" alt="with a guide">
        <P>5-7 people (Just raft) - $150</P>
        <p>5-7 people (with guide) - $200</p>
+       <p>This trip is perfect for those who what to bring friends and family with them.
+        You will experience the time of your life those you love. 
+       </p>
        <h4>kayaking</h4>
        <img src="images/kayak.jpg" alt="guided group">
        <p>1 kayak (not guide) - $75</p>
        <P>1 kayak with guide - $150</P>
+       <p>This trip is a blast you start the same place as the raft trips, 
+        but have your adventure as you work though rapids and other things.
+       </p>
 
 
 
