--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -75,6 +75,7 @@
        <h3>Rafting</h3>
        <img src="images/raftingtrip.jpg" alt="with a guide">
        <P>5-7 people (Just raft) - $150</P>
+       <p>To go on a trip with your own raft and no guide you need to have experience.</p>
        <p>5-7 people (with guide) - $200</p>
        <p>This trip is perfect for those who what to bring friends and family with them.
         You will experience the time of your life those you love. 
