--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -69,6 +69,7 @@
             </div>
         </section>
         <h2>Overview</h2>
+        <img src="images/payette.webp" alt="overview">
         <h3>Purpose</h3>
         <h4>Why?</h4>
         <p>-to help those to know about rafting 
@@ -88,9 +89,9 @@
         <img src="images/logo.png" alt="Rafting Site">
         <h2>Wireframes</h2>
         <h3>Home Page Wireframes</h3>
-        <img src="images/wwr-wireframe-home.png" alt="home page Wireframe">
+        <url src="images/wwr-wireframe-home.png" alt="home page Wireframe">
         <h3>Page 2 Wireframe</h3>
-        <img src="images/wwr-wireframe-aboutus-update.png" alt="about us Wireframe" Width="700">
+        <url src="images/wwr-wireframe-aboutus-update.png" alt="about us Wireframe" Width="700">
     </main>
 
     <footer> 
