--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -87,15 +87,11 @@
         <h2>Branding</h2>
         <h3>Website logo</h3>
         <img src="images/logo.png" alt="Rafting Site">
-        <h2>Wireframes</h2>
-        <h3>Home Page Wireframes</h3>
-        <url src="images/wwr-wireframe-home.png" alt="home page Wireframe">
-        <h3>Page 2 Wireframe</h3>
-        <url src="images/wwr-wireframe-aboutus-update.png" alt="about us Wireframe" Width="700">
     </main>
 
     <footer> 
         ©2025 :0 Rafting Site Doc :0 William Hansen
+        <a href="wireframe.html">wireframe</a>
 
     </footer>
 </body>
