--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -90,7 +90,7 @@
         <form>
             <fieldset>Questions</fieldset>
                 <div class="form-item">
-                    <label for="Q1">wht is your email?</label>
+                    <label for="Q1">what is your email?</label>
                     <input type="email" id="Q1" name="Q1">
                 </div>
                 <div class="form-item column2">
