--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -89,13 +89,13 @@
         <img src="images/logo.png" alt="Rafting Site">
         <section>
             <form>
-                <fieldset>Questions</fieldset>
+                <fieldset>subscribe</fieldset>
                     <div class="form-item">
                         <label for="Q1">what is your email?</label>
                         <input type="email" id="Q1" name="Q1">
                     </div>
                     <div class="form-item column2">
-                            <label for="Q2">I would like to recieve emaails</label>
+                            <label for="Q2">I would like to recieve newsletter emaails</label>
                             <input type="checkbox" id="Q2" name="Q2">
                 <button type="submit"> Submit Poll</button>
             </form>
