--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -91,8 +91,24 @@
 
 
     </main>
-    <footer>
-
+    <footer> 
+        <div class="grid-container">
+            <div class="grid-item-3"></div>
+            ©2025 The raft company -- William Hansen 
+            <nav class="sociallinks">
+                <a href="https://facebook.com">
+                    <img src="images/fb.jpg" alt="Facebook">
+                </a>
+                <a href="https://twitter.com">
+                    <img src="images/tw.png" alt="twitter">
+                
+                </a>
+                <a href="https://instagram.com">
+                    <img src="images/IG.jpg" alt="intagram">
+                </a>
+                <a href="wireframe.html">Wireframe</a>
+            </nav>
+        </div>
     </footer>
 </body>
 </html>
