--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -11,15 +11,13 @@
   <meta name="author" content="William Hansen">
   <link rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
-<body>
-   <head> 
+<body> 
    <h1>The Rafting company </h1>
    <div>William Hansen</div>
-   </head>
    <main>
        <header>
            <div class="top-bar">
-               <nav class="navbar navbar-inverse" role="banner" style="z-index: 99;">
+               <nav class="navbar navbar-inverse" style="z-index: 99;">
                    <div class="container">
                        <div class="navbar-header">
                            <a href="site-plan-rafting.html">Home</a>
@@ -53,10 +51,10 @@
                                 </div>
                            </div>
                        </div>
-                       <div clss="col-sm-4">
+                       <div class="col-sm-4">
                            <div class="round-box su">
                                <div class="feature-wrap">
-                                   <h3 clsss="text-center">Learn About us</h3>
+                                   <h3 class="text-center">Learn About us</h3>
                                    <p>Desire to know more about us just click he
                                    <br>
                                    <div class="text-center">
