--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,15 +9,13 @@
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
 <body>
-    <head> 
     <h1>The Rafting company </h1>
     <div>William Hansen</div>
-    </head>
 
     <main>
         <header>
             <div class="top-bar">
-                <nav class="navbar navbar-inverse" role="banner" style="z-index: 99;">
+                <nav class="navbar navbar-inverse" style="z-index: 99;">
                     <div class="container">
                         <div class="navbar-header">
                             <a href="site-plan-rafting.html">Home</a>
@@ -40,22 +38,19 @@
             <div class="container">
                 <div class="row">
                     <div class="faetures">
-                        <div class="col-sm-4">
-                            <div class="round-box">
-                                <div class="faeture-wrap">
-                                    <h3 class="text-center">Get on schedule</h3>
-                                    <p>Get a time scheluded to come enjoy a time with us</p>
-                                    <br>
-                                    <div class="text-center">
-                                        <a href="trips.html">schedule here</a>
-                                    </div>
-                                 </div>
-                            </div>
+                        <div class="round-box">
+                            <div class="faeture-wrap">
+                                <h3 class="text-center">Get on schedule</h3>
+                                <p>Get a time scheluded to come enjoy a time with us</p>
+                                <br>
+                                <div class="text-center">
+                                    <a href="trips.html">schedule here</a>
+                                </div>
+                             </div>
                         </div>
-                        <div clss="col-sm-4">
                             <div class="round-box su">
                                 <div class="faeture-wrap">
-                                    <h3 clsss="text-center">Learn About us</h3>
+                                    <h3 class="text-center">Learn About us</h3>
                                     <p>Desire to know more about us just click here.</p>
                                     <br>
                                     <div class="text-center">
@@ -97,6 +92,8 @@
                     <div class="form-item column2">
                             <label for="Q2">I would like to recieve newsletter emaails</label>
                             <input type="checkbox" id="Q2" name="Q2">
+                    
+                    </div>
                 <button type="submit"> Submit Poll</button>
             </form>
         </section>
